# TouhouGGEZ

./: Cargo.toml  script.th  script.touhou
src/: main.rs  physics.rs
