[package]
name = "TouhouGGEZ"
version = "0.1.0"
edition = "2021"

[dependencies]
ggez = "0.9.3"
touhoulang = { path = "../TouhouLang" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. GGEZE), but not for our code:
[profile.dev.package."*"]
opt-level = 3
